<resources>
    <string name="app_name">Tshirt Wholesalers</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Registration</string>
    <string name="email_error">Plese enter email address</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="app_title">Tshirt Wholesalers</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_address">AddAddress</string>
    <string name="title_activity_other_information">OtherInformation</string>
    <string name="abtus">About Us</string>
    <string name="questions">Questions</string>
    <string name="embroidery">Embroidery</string>
    <string name="screenprint">Screen Print</string>
    <string name="heattransfer">Heat Transfer</string>
    <string name="ourcustomer">Our Customer</string>
    <string name="shippingpolicy">Shipping Policy</string>
    <string name="refundpolicy">Refund Policy</string>
    <string name="contactUs">Contact us</string>
    <string name="reviews">Reviews</string>
    <string name="blog">Blog</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsofservice">Terms of service</string>
    <string name="appsahre">Show Your Love</string>
    <string name="rateus">Rate Us</string>
    <string name="shareApp">Share The App</string>
    <string name="login">Login</string>
    <string name="ascolor">Ascolour</string>
    <string name="aussi">Aussie Pacific</string>
    <string name="prints">Australian Prints</string>
    <string name="carttxt">There are no items currently in your cart</string>
    <string name="favtxt">Add more from favourite</string>
    <string name="fav">Favourites</string>
    <string name="title_activity_my_addresses">MyAddresses</string>
    <string name="addresstxt">Choose Delivery Address</string>
    <string name="title_activity_shipping_charge">ShippingCharge</string>
    <string name="title_activity_payment_mode">PaymentMode</string>
    <string name="title_activity_selected_item">SelectedItemActivity</string>
    <string name="title_activity_favourites_list">FavouritesList</string>
    <string name="title_activity_paypalpayment">PaypalpaymentActivity</string>
    <string name="email">www.akunaTechnologies.com</string>
    <string name="chng">Change</string>
    <string name="title_activity_credit_card">CreditCardActivity</string>
    <string name="title_activity_main2">Search..</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_my_cart">MyCartActivity</string>
    <string name="title_activity_web_checkout">WebCheckoutActivity</string>
    <string name="title_activity_customer_orders">CustomerOrders</string>
    <string name="title_activity_product_list_acitvity">ProductListAcitvity</string>
    <string name="title_activity_customer_profile">CustomerProfile</string>
    <string name="title_activity_subcatogories_list">SubcatogoriesListActivity</string>
    <string name="title_activity_status_web_view">StatusWebView</string>
    <string name="title_activity_thankyou">ThankyouActivity</string>
    <string name="thanku">Your order placed successfully</string>
    <string name="title_activity_favourtie_tab_activtiy">FavourtieTabActivtiy</string>
    <string name="title_activity_favourite_items_list">FavouriteItemsList</string>
    <string name="favtext">You Currently do not have any Items added to the Favourites</string>
    <string name="title_activity_sub_category_products">SubCategoryProducts</string>


</resources>
