<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textcolor"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".UserScreens.OtherInformation"
        tools:showIn="@layout/activity_other_information">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="70dp"
            android:text="Info"
            android:textColor="@color/headingtxtcolor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:background="@drawable/text_background"
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <TextView
                android:id="@+id/txt_abtus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_abtus"
                android:paddingLeft="20dp"
                android:text="@string/abtus"
                android:textColor="@color/headingtxtcolor"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_question"
                android:paddingLeft="20dp"
                android:text="@string/questions"
                android:textColor="@color/headingtxtcolor"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>


            <TextView
                android:id="@+id/txt_embroidery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_embroidery"
                android:paddingLeft="20dp"
                android:text="@string/embroidery"
                android:textColor="@color/headingtxtcolor"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_screenprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_screenprint"
                android:paddingLeft="20dp"
                android:text="@string/screenprint"
                android:textColor="@color/headingtxtcolor"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_heattransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_heattransfer"
                android:paddingLeft="20dp"
                android:text="@string/heattransfer"
                android:textColor="@color/headingtxtcolor"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_ourcustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_ourcustomer"
                android:paddingLeft="20dp"
                android:text="@string/ourcustomer"
                android:textColor="@color/headingtxtcolor"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>


            <TextView
                android:id="@+id/txt_shippingpolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_shippingpolicy"
                android:paddingLeft="20dp"
                android:text="@string/shippingpolicy"
                android:textColor="@color/headingtxtcolor"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_refundpolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_refundpolicy"
                android:paddingLeft="20dp"
                android:text="@string/refundpolicy"
                android:textColor="@color/headingtxtcolor"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>


            <TextView
                android:id="@+id/txt_contactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_contactus"
                android:paddingLeft="20dp"
                android:text="@string/contactUs"
                android:textColor="@color/headingtxtcolor"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_reviews"
                android:paddingLeft="20dp"
                android:text="@string/reviews"
                android:textColor="@color/headingtxtcolor"
               />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_blogs"
                android:paddingLeft="20dp"
                android:text="@string/blog"
                android:textColor="@color/headingtxtcolor"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_privacypolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_privacypolicy"
                android:paddingLeft="20dp"
                android:text="@string/privacypolicy"
                android:textColor="@color/headingtxtcolor"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_termsofservice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_termsandservice"
                android:paddingLeft="20dp"
                android:text="@string/termsofservice"
                android:textColor="@color/headingtxtcolor"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"
                android:visibility="invisible"></View>


        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/appsahre"
            android:textColor="@color/headingtxtcolor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearlayout_appshare"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_background"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <TextView
                android:id="@+id/txt_rateus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_rateus"
                android:paddingLeft="20dp"
                android:text="@string/rateus"
                android:textColor="@color/headingtxtcolor"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/headingtxtcolor"></View>

            <TextView
                android:id="@+id/txt_shareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_shareapp"
                android:paddingLeft="20dp"
                android:text="@string/shareApp"
                android:textColor="@color/headingtxtcolor"
              />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:background="@color/headingtxtcolor"
                android:visibility="invisible"></View>

        </LinearLayout>


        <LinearLayout
            android:background="@drawable/text_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_appshare"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="txt_login"
                android:paddingLeft="20dp"
                android:text="@string/login"
                android:textColor="@color/headingtxtcolor"
                />


        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>